# ARHIAX-Dx-Pro

./: .dockerignore  .env.example  .gitattributes  .gitignore  AUDITORIA_DOCUMENTOS_PRO.json  AUDITORIA_DOCUMENTOS_PRO.md  CD_GLOBAL_IVANIA_RUA__validacion.json  Dockerfile  README.md  deploy-cloudrun.bat  docker-compose.yml  gen_pdf_v7_demo.py  pyproject.toml  start-cloudrun.sh  start-pg.sh  start.bat  supervisord.conf
back/: .env.example  Dockerfile  Makefile  pyproject.toml
back-api/: .env.example  Dockerfile  alembic.ini  pdf_text.txt  pyproject.toml
back-api/alembic/: env.py
back-api/alembic/versions/: 0001_initial.py  0002_survey.py  0003_documents.py  0004_fix_survey_columns.py  0005_pro_tables.py  0006_pro_pipeline_stages.py  0007_pro_missing_columns.py
back-api/docs-project/: ANALISIS_REAL_COMPLETITUD.md  COMO_FUNCIONAN_LAS_ENCUESTAS.md  ESTADO_ACTUAL_Y_PIPELINE.md  IMPLEMENTACION_ENCUESTAS_COMPLETADA.md  IMPLEMENTACION_ENCUESTAS_PROGRESO.md  PLAN_DE_COMPLETITUD.md  PLATAFORMA.md  REPORTE_TESTING_Y_MEJORAS.md  TEST_PLAN.md
back-api/scripts/: audit_all_documents.py  audit_local_pdfs.py  check_db.py  check_survey.py  cloud_audit_cases.py  cloud_audit_report.json  cloud_clean_and_e2e.py  cloud_delete_old_case.py  cloud_pdf_debug.py  cloud_smoke_create.py  cloud_survey_debug.py  diag_409_pdf.py  download_deliverables.py  e2e_pro_flow.py  eval_congelada_dos_casos.py  inspect_diagnostic.py  inspect_ivania_g06.py  preview_ivania_pdf.py  regen_pdf.py  regen_pdf_only.py  render_pdf_pages.py  retry_deliverables.py  user_flow_completo.py
back-api/src/api/: __init__.py  auth.py  config.py  db.py  main.py  notifications.py  pipeline_runner.py  seed.py  tasks.py  worker.py
back-api/src/api/models/: __init__.py  base.py  diagnostic.py  pro.py  survey.py  user.py
back-api/src/api/pipeline/: __init__.py  docx_builder.py  executor.py  governance_client.py  hypothesis_pack.py  llm_guard.py  pdf_builder.py  phenomenon_engine.py  (+13 more)
back-api/tests/: conftest.py  test_auth.py  test_diagnostics.py  test_grammar_gate.py  test_instrument_coherence.py  test_llm_guard.py  test_phenomenon_engine.py  test_pipeline_executor.py  test_pro_coherence.py  test_pro_g13_fallback.py  test_pro_survey_roles.py  test_reviews.py  test_survey.py  test_worker_recovery.py
back/docs/: ARCHITECTURE.md  AUDIT_MATRIX.md  INSTALLATION_GUIDE.md  MODEL_STRATEGY.md  OPERATIONS.md  POST_INSTALL_HANDOFF.md  THREAT_MODEL.md
back/docs/audit-pack/: AGENT_GOVERNANCE_SPEC.md  CONTROL_TRACEABILITY_MATRIX.md  DECISION_TABLES.md  POLICY_BUNDLE_VERSIONING.md  SHARED_RESPONSIBILITY_MODEL.md  TEST_COVERAGE_GOVERNANCE.md
back/policies/bundles/: governance.rego  risk_controls.rego
back/specs/: README.md  agent_identity.json  autonomy_profile.json  bbr_baseline.json  data_scopes.json  model_strategy.json  operation_catalog.json  policy_matrix.json  tool_catalog.json
back/src/arhiax_dx/: __init__.py  config.py  installation.py  installation_assets.py  main.py  models.py  specs.py
back/tests/: conftest.py  test_api.py  test_governance.py  test_installation.py  test_installation_assets.py  test_specs.py
back/var/: evidence-ledger.jsonl
(+280 files in other folders)
