[project]
name = "arhiax-dxpro-runtime"
version = "0.1.0"
description = "Standalone ARHIAX DX Pro governed diagnostic runtime"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[project.scripts]
arhiax-dxpro-server = "dxpro_runtime.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
