[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arhiax-dx-api"
version = "1.0.0"
description = "ARHIAX Dx pipeline execution API — extends the governance engine."
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [
  {name = "Sinergia Consulting Group S.A.S."}
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",
  "celery>=5.4.0",
  "redis>=5.0.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.9",
  "google-genai>=0.3.0",
  "anthropic>=0.29.0",
  "python-docx>=1.1.0",
  "reportlab>=4.2.0",
  "pypdf>=4.0.0",
  "openpyxl>=3.1.0",
  "websockets>=12.0",
  "httpx>=0.27.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
